# orthoai_live_demo

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.gpu  README.md  README_Clinicians.md  data_pipeline.py  docker-compose.yml  pyproject.toml  requirements.txt  train_exp1_6_malocclusion.py
.github/workflows/: deploy-backend.yml  deploy-frontend.yml  deploy-gpu-worker.yml
OrthoPatientFusion/: README.md  __init__.py  aggregate_exp1_7_results.py  experiment_01_late_fusion.py  experiment_02_attention_mil.py  experiment_03_set_transformer.py  experiment_04_cross_attention.py  experiment_05_auxiliary_heads.py  ortho_patient_fusion_core.py  resume_attention_mil_exp1_7.slurm.sh  submit_exp1_7_orthopatientfusion.slurm.sh
alembic/: env.py
alembic/versions/: 001_initial_schema.py  3279515f6aee_make_patient_id_title_nullable.py  8f4d9a2c1b7e_add_terms_acceptance_to_users.py
app/: celery_app.py  config.py  database.py  main.py  models.py  schemas.py
app/api/: deps.py  middleware.py
app/core/: audit.py  email.py  explanation.py  mailgun_service.py  (+4 more)
app_clinicians/: main.py
docs/: API_SUMMARY.md  CI_CD_SETUP.md  CLOUDWATCH_MONITORING.md  OTP_AUTHENTICATION.md  PRODUCTION_AWS_CHECKLIST.md  SETUP.md  SSO_INTEGRATION.md  bin_README.md
frontend/: .env.example  .gitignore  README.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts
orthoai_multimodel_best_model/: README.md  requirements.txt  run_server.sh
tests/: test_auth_and_activity.py  test_clinical_api.py  test_inference_api.py  test_pdf_summary.py
(+65 files in other folders)
